--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,9 +42,10 @@
         <item>Human Services</item>
         <item>Religion</item>
         <item>Research &amp; Public Policy</item>
-
     </string-array>
 
+    <!-- View Bookings Fragment Text -->
+    <string name="events_txt">EVENTS</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_register">RegisterActivity</string>
